[chore] [bug] fixed gui, but back a tag won't work

--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,10 @@ a {
     background: springgreen;
 }
 
-text-primary {
+.text-primary {
     color: royalblue;
 }
 
-text-secondary {
+.text-secondary {
     color: greenyellow;
 }
